[project]
name = "coderun"
version = "1.1.2"
description = "A code runner for multiple language"
readme = "README.md"
authors = [
    { name = "rozari0", email = "rozario@disroot.org" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
coderun = "coderun:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"
